cmake_minimum_required(VERSION 3.26)
project(GRA)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
set(CMAKE_BUILD_TYPE Release)
file(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")
include_directories("${CMAKE_SOURCE_DIR}/include")
include_directories("C:/SFML/SFML-3.0.0/include")
set(SFML_STATIC_LIBRARIES OFF)
find_package(SFML 3 REQUIRED COMPONENTS Graphics Audio Network)
set(GraLib_DIR "C:/Users/janek/Desktop/gra/install/lib/cmake/GraLib")
find_package(GraLib REQUIRED)
link_directories("C:/SFML/SFML-3.0.0/lib")
add_executable(GRA ${SOURCES})
#set_target_properties(GRA PROPERTIES WIN32_EXECUTABLE TRUE)
target_link_libraries(GRA PRIVATE SFML::Graphics SFML::Audio SFML::Network opengl32 GraLib::GraLib)
